--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  * {
+    /* @apply border border-dashed border-[tomato] */
+  }
+
+  @keyframes spin {
+      from {
+        transform: rotate( 0deg );
+      }
+      to {
+        transform: rotate( 360deg );
+      }
+  }
+
+  .spin {
+    animation: spin 40s linear infinite
+  }
 }
